force-app/main/default/objects/BenchmarkJobSetting__mdt/BenchmarkJobSetting__mdt.object-meta.xml
<CustomObject>
    <description>Includes configuration details for a single instance of a benchmark job.</description>
    <label>Benchmark Job Setting</label>
    <pluralLabel>Benchmark Job Settings</pluralLabel>
</CustomObject>