force-app/main/default/objects/BenchmarkJobSetting__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When checked, the job is eligible to run when called.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>