force-app/main/default/objects/BenchmarkJobSetting__mdt/fields/ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ApexClass__c</fullName>
    <inlineHelpText
	>The fully qualified API name of an Apex Class. An instance of this class will be instantiated and executed during the given benchmark job.
This Apex Class must implements the &quot;Benchmarkable&quot; interface, and have a publicly visible, 0-arg constructor.</inlineHelpText>
    <label>Apex Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>