force-app/main/default/objects/BenchmarkJobSetting__mdt/fields/ExcludedSandboxes__c.field-meta.xml
<CustomField>
    <fullName>ExcludedSandboxes__c</fullName>
    <inlineHelpText
	>A comma-separated list of sandbox domain names (ex., &quot;full&quot;, &quot;partial&quot;, &quot;uat&quot;, etc.) that will be excluded from processing. 
Use this field to prevent the job from running in certain sandboxes, if desired. 
To prevent the job from running in a production environment, set the &quot;Run In Production&quot; field to false.</inlineHelpText>
    <label>Excluded Sandbox(es)</label>
    <type>TextArea</type>
</CustomField>