force-app/main/default/objects/BenchmarkJobSetting__mdt/fields/Flow__c.field-meta.xml
<CustomField>
    <fullName>Flow__c</fullName>
    <inlineHelpText
	>The fully qualified API name of an autolaunched Flow that handles the benchmarking logic</inlineHelpText>
    <label>Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>