force-app/main/default/objects/BenchmarkJobSetting__mdt/fields/RunInProduction__c.field-meta.xml
<CustomField>
    <fullName>RunInProduction__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText
	>When checked, this Benchmark Job may be permitted to run in production environments. Use caution, as this may have unintended consequences.</inlineHelpText>
    <label>Run in Production?</label>
    <type>Checkbox</type>
</CustomField>