force-app/main/default/objects/BenchmarkJobSetting__mdt/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <inlineHelpText>The type of SObject being benchmarked by the current job.</inlineHelpText>
    <label>SObjectType</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>BenchmarkJobSettings</relationshipLabel>
    <relationshipName>BenchmarkJobSettings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>