force-app/main/default/objects/BenchmarkJobSetting__mdt/fields/SObjectTypeName__c.field-meta.xml
<CustomField>
    <fullName>SObjectTypeName__c</fullName>
    <inlineHelpText>Use this field if the desired SObjectType is not available in the dropdown.</inlineHelpText>
    <label>SObjectType Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>