force-app/main/default/objects/BenchmarkJobSetting__mdt/validationRules/ShouldHaveApexClassOrFlowName.validationRule-meta.xml
<ValidationRule>
    <fullName>ShouldHaveApexClassOrFlowName</fullName>
    <active>true</active>
    <description>Developers should specify an Apex Class, OR a Flow - but not both</description>
    <errorConditionFormula>OR(
  NOT(ISBLANK(ApexClass__c)) &amp;&amp; NOT(ISBLANK(Flow__c)),
  ISBLANK(ApexClass__c) &amp;&amp; ISBLANK(Flow__c)
)</errorConditionFormula>
    <errorDisplayField>ApexClass__c</errorDisplayField>
    <errorMessage>Please specify either an Apex Class, or a Flow - but not both.</errorMessage>
</ValidationRule>