force-app/main/default/objects/BenchmarkJobSetting__mdt/validationRules/ShouldOnlyHaveOneSObjectTypeValue.validationRule-meta.xml
<ValidationRule>
    <fullName>ShouldOnlyHaveOneSObjectTypeValue</fullName>
    <active>true</active>
    <description
	>Developers should either specify an SObjectType via the dropdown, or the free text field - but not both</description>
    <errorConditionFormula>OR(
  NOT(ISBLANK(TEXT(SObjectType__c))) &amp;&amp; NOT(ISBLANK(SObjectTypeName__c)),
  ISBLANK(TEXT(SObjectType__c)) &amp;&amp; ISBLANK(SObjectTypeName__c)
)</errorConditionFormula>
    <errorDisplayField>SObjectType__c</errorDisplayField>
    <errorMessage
	>Please specify an SObjectType, using either the dropdown or the free-text field - but not both.</errorMessage>
</ValidationRule>